--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,3 +19,5 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 @import "kiosks";
 @import "our_story";
 @import "happenings";
+@import "events-single";
+@import "newsletter-popup";
