--- a/templates/events_content.html
+++ b/templates/events_content.html
@@ -5,9 +5,9 @@
 <button id="ajaxButton" url='{{current.url}}' boxes='happenings' filter='none' >DO THE AJAX</button>
 {{current.request}}
     <div class="page-landing-header">
-      <img src="{{static('img/happenings-landing/Left.png')}}" alt="">
+      <img src="{{static('img/happenings-landing/Left.png')}}" alt="" class='header-icon-left'>
       <h1>Happenings</h1>
-      <img src="{{static('img/happenings-landing/Right.png')}}" alt="">
+      <img src="{{static('img/happenings-landing/Right.png')}}" alt="" class='header-icon-right'>
     </div>
 
   </div>
