--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -191,6 +191,7 @@
         img{
           width: 100%;
           height: auto;
+          border: 2px solid $toro_red;
         }
         &.with-padding{
           height: 0;
