--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -29,6 +29,7 @@
     }
     .kiosk-box-img{
       position: relative;
+
       h4{
         position: absolute;
         left: 0;
@@ -55,6 +56,7 @@
     img{
       width: 100%;
       height: auto;
+      border: 2px solid $toro_red;
     }
     &:hover h4{
       opacity: 1;
