--- a/templates/boxes/restaurant.html
+++ b/templates/boxes/restaurant.html
@@ -18,13 +18,29 @@
   .rest-single-menus .rest-single-menu-select .rest-single-menu-title.active{
     background-color: {{current.fields.primary_color}};
   }
+  .rest-single-gallery-controls .rest-slide-prev:hover, .rest-single-gallery-controls .rest-slide-next:hover{
+    background-color: {{current.fields.primary_color}};
+  }
+  .rest-single-gallery-controls .rest-slide-prev:hover .st0, .rest-single-gallery-controls .rest-slide-next:hover .st0{
+    stroke: white;
+  }
+</style>
+
+<style type="text/css">
+  .st0{
+    fill:none;
+    stroke:{{current.fields.primary_color}};
+    stroke-width:5;
+    stroke-miterlimit:10;
+    transition: ease 250ms all;
+  }
 </style>
 
 <article class="restaurant-single rest-{{current.slug}}">
   <div class="content-margins">
 
     <section class="restaurant-header">
-      <img src="{{current.fields.banner_image.url}}" alt="">
+      <img src="{{current.fields.banner_image.url}}" alt="{{current.fields.banner_image.alt}}">
     </section>
 
     <section class="restaurant-content" style='border-color: {{current.fields.primary_color}}'>
@@ -39,7 +55,34 @@
       </div>
       <div class="restaurant-single-info rest-right-col">
         <div class="rest-single-gallery" style='border-color: {{current.fields.primary_color}}'>
+          {% for image in current.fields.gallery %}
+          <div class="rest-single-gallery-img-cont">
+            <div class="rest-single-gallery-img">
+              <img src="{{image.image_url}}" alt="{{image.alt_text}}" class='rest-single-img'>
+              <div class="rest-single-gallery-controls home-slide-controls" style="border-color: {{current.fields.primary_color}}">
+                <button class="rest-slide-prev home-slide-prev" role='button'>
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 25.9 45.2" style="enable-background:new 0 0 25.9 45.2;" xml:space="preserve">
 
+                  <polyline class="st0" points="4.1,1.7 21.9,22.7 4.1,43.6 "/>
+                  </svg>
+                </button>
+                <button class="rest-slide-next" role='button'>
+                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 25.9 45.2" style="enable-background:new 0 0 25.9 45.2;" xml:space="preserve">
+                  <polyline class="st0" points="4.1,1.7 21.9,22.7 4.1,43.6 "/>
+                  </svg>
+                </button>
+                <div class="rest-slide-current" style='color: {{current.fields.primary_color}}'>
+                  {{loop.index}}/{{current.fields.gallery|length}}
+                  {% if image.alt_text %}
+                    <span>{{image.alt_text}}</span>
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
         </div>
         <div class="rest-contact">
           <div class="rest-contact-inner">{{current.fields.contact_info}}</div>
