--- a/templates/el_blog.html
+++ b/templates/el_blog.html
@@ -6,9 +6,9 @@
 <section class="blog-landing">
   <div class="content-margins">
     <div class="page-landing-header">
-      <img src="{{static('img/el-blog-landing/Left.png')}}" alt="">
+      <img src="{{static('img/el-blog-landing/Left.png')}}" alt="" class='header-icon-left'>
       <h1>El Blog</h1>
-      <img src="{{static('img/el-blog-landing/Right.png')}}" alt="">
+      <img src="{{static('img/el-blog-landing/Right.png')}}" alt="" class='header-icon-right'>
     </div>
 
   </div>
