--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,6 +3,7 @@
 <!-- .container close -->
 </div>
 
+{% include "newsletter_popup.html" %}
 <footer id="newsletter-capture" class="site-footer">
   <div class="content-margins">
     <h2 class="newsletter-capture-title">
