--- a/templates/restaurant_landing.html
+++ b/templates/restaurant_landing.html
@@ -6,9 +6,9 @@
   <div class="content-margins">
 
     <div class="page-landing-header">
-      <img src="{{static('img/restaurant-landing/Left.png')}}" alt="">
+      <img src="{{static('img/restaurant-landing/Left.png')}}" alt="" class='header-icon-left'>
       <h1>Our Restaurants</h1>
-      <img src="{{static('img/restaurant-landing/Right.png')}}" alt="">
+      <img src="{{static('img/restaurant-landing/Right.png')}}" alt="" class='header-icon-right'>
     </div>
 
 
