--- a/templates/shop.html
+++ b/templates/shop.html
@@ -3,9 +3,9 @@
 <section class="shop-landing">
   <div class="content-margins">
     <div class="page-landing-header">
-      <img src="{{static('img/shop-landing/Left.png')}}" alt="">
+      <img src="{{static('img/shop-landing/Left.png')}}" alt="" class='header-icon-left'>
       <h1>Shop</h1>
-      <img src="{{static('img/shop-landing/Right.png')}}" alt="">
+      <img src="{{static('img/shop-landing/Right.png')}}" alt="" class='header-icon-right'>
     </div>
 
   </div>
