--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -3,6 +3,7 @@
 <!-- START base.html  -->
 <section class="kiosk-landing">
   <div class="content-margins">
+    <h1 class="mobile-kiosk-title">{{current.name}}</h1>
     <div class="page-landing-header">
       <img src="{{current.fields.thumbnail_left.url}}" alt="current.thumbnail_left.alt">
       <h1>{{current.name}}</h1>
