--- a/assets/css/_kiosks.scss
+++ b/assets/css/_kiosks.scss
@@ -25,9 +25,15 @@
 	  width:100%;
 	  border:2px solid $toro-red;
 	  margin-bottom:70px;
+    @media (max-width: 767px){
+      flex-direction: column;
+    }
 
 	  .kiosk-gallery{
       width: 67%;
+      @media (max-width: 767px){
+        width: 100%;
+      }
       border: none;
       display: flex;
       flex-direction: column;
@@ -49,25 +55,36 @@
       .rest-single-gallery{
         border-color: $toro_red;
         // padding: 10px;
-        border-bottom-width: 2px;
+        // border-bottom-width: 2px;
         border-bottom-style: solid;
         position: relative;
+        @media (max-width: 767px){
+          border-bottom: 0px;
+        }
         // height: 0;
         // padding-bottom: 98%;
       }
 	  }
 	  .kiosk-information{
 		  width:345px;
+      @media (max-width: 767px){
+        width: 100%;
+        border-right: 0px;
+      }
 		  display: flex;
 		  flex-direction: column;
 		  border-right:2px solid $toro-red;
 
-		  .kiosk-description, .kiosk-map, .kiosk-share{
+		   .kiosk-map, .kiosk-share{
 			  border-bottom:2px solid $toro-red;
+
 		  }
 
 		  .kiosk-description{
 			  padding:40px;
+        @media (max-width: 767px){
+          border: 0px;
+        }
 			  strong{
 				  color:$toro-red;
 				  font-size:6rem;
@@ -105,4 +122,34 @@
     }
   }
 
+}
+
+
+.mobile-kiosk-title{
+  display: none;
+}
+
+@media (max-width: 767px){
+  .mobile-kiosk-title{
+    display: block;
+    text-align: center;
+    color: $toro_red;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-size: 60px;
+    font-family: $knockout-bantam;
+  }
+  .single-kiosk{
+    .kiosk-landing{
+      img{
+        display: block;
+      }
+    }
+  }
+  .page-landing-header{
+    justify-content: center;
+    h1{
+      display: none;
+    }
+  }
 }
