--- a/templates/el_blog.html
+++ b/templates/el_blog.html
@@ -5,6 +5,8 @@
 
 <section class="blog-landing">
   <div class="content-margins">
+    <h1 class="mobile-blog-title">El Blog</h1>
+
     <div class="page-landing-header">
       <img src="{{static('img/el-blog-landing/Left.png')}}" alt="" class='header-icon-left'>
       <h1>El Blog</h1>
