--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -5,15 +5,15 @@
 $knockout : "Knockout 30 A", "Knockout 30 B";
 
 // $knockout-bantam : 'Knockout-HTF47-Bantamweight', Arial Narrow, Arial, sans-serif;
-$knockout-bantam : "Knockout 47 A", "Knockout 47 B";
+$knockout-bantam : "Knockout 67 A", "Knockout 67 B";
 
 // $knockout-welter : 'Knockout-HTF50-Welterweight', Arial Narrow, Arial, sans-serif;
 $knockout-welter : "Knockout 50 A", "Knockout 50 B";
 
 // $knockout-lite : 'Knockout-HTF49-Liteweight', Arial Narrow, Arial, sans-serif;
-$knockout-lite : "Knockout 67 A", "Knockout 67 B";
+$knockout-lite : "Knockout 49 A", "Knockout 49 B";
 
-// $knockout-feather : "Knockout-HTF68-FullFeatherwt";
+$knockout-feather : "Knockout 68 A", "Knockout 68 B";
 
 
 
@@ -41,7 +41,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H1 components */
     @mixin h1-desktop-style {
       font-size: 12rem;
-//       font-weight: bold;
       line-height: 9.5rem;
       letter-spacing: 0.15rem;
       text-transform: none;
@@ -49,7 +48,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h1-mobile-style {
       font-size: 9rem;
-//       font-weight: bold;
       line-height: 7.5rem;
       letter-spacing: 0.135rem;
       text-transform: none;
@@ -70,7 +68,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H2 Components */
     @mixin h2-desktop-style {
       font-size: 10rem;
-//       font-weight: bold;
       line-height: 9rem;
       letter-spacing: 0.15rem;
       text-transform: none;
@@ -78,7 +75,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h2-mobile-style {
       font-size: 8.6rem;
-//       font-weight: bold;
       line-height: 7.2rem;
       letter-spacing: 0.129rem;
       text-transform: none;
@@ -99,7 +95,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H4 Components */
     @mixin h3-desktop-style {
       font-size: 3.4rem;
-//       font-weight: bold;
       line-height: 5rem;
       letter-spacing: normal;
       text-transform: none;
@@ -107,7 +102,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h3-mobile-style {
       font-size: 2.9rem;
-//       font-weight: bold;
       line-height: 4.5rem;
       letter-spacing: normal;
       text-transform: none;
@@ -128,7 +122,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H4 Components */
     @mixin h4-desktop-style {
       font-size: 5rem;
-//       font-weight: bold;
       line-height: 4.3rem;
       letter-spacing: 0.083rem;
       text-transform: none;
@@ -136,7 +129,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h4-mobile-style {
       font-size: 3.9rem;
-//       font-weight: bold;
       line-height: 3.2rem;
       letter-spacing: 0.065rem;
       text-transform: none;
@@ -157,7 +149,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H5 Components */
     @mixin h5-desktop-style {
       font-size: 2.5rem;
-//       font-weight: bold;
       line-height: 2.8rem;
       letter-spacing: normal;
       text-transform: none;
@@ -165,7 +156,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h5-mobile-style {
       font-size: 1.7rem;
-//       font-weight: bold;
       line-height: 2.4rem;
       letter-spacing: normal;
       text-transform: none;
@@ -186,7 +176,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H6 Components */
     @mixin h6-desktop-style {
       font-size: 1.4rem;
-//       font-weight: normal;
       line-height: 2rem;
       letter-spacing: normal;
       text-transform: none;
@@ -194,7 +183,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h6-mobile-style {
       font-size: 1.3rem;
-//       font-weight: normal;
       line-height: 2rem;
       letter-spacing: normal;
       text-transform: none;
@@ -215,7 +203,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Paragraph Components */
     @mixin p-desktop-style {
       font-size: 1.9rem;
-//       font-weight: normal;
       line-height: 2.4rem;
       letter-spacing: normal;
       text-transform: none;
@@ -223,7 +210,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin p-mobile-style {
       font-size: 1.5rem;
-//       font-weight: normal;
       line-height: 2.1rem;
       letter-spacing: normal;
       text-transform: none;
@@ -244,7 +230,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Nav Font Components */
     @mixin nav-font-desktop-style {
       font-size: 2.2rem;
-//       font-weight: lighter;
       line-height: 2.9rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -252,7 +237,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin nav-font-mobile-style {
       font-size: 2.2rem;
-//       font-weight: lighter;
       line-height: 2.9rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -273,7 +257,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Caption Font Components */
     @mixin caption-font-desktop-style {
       font-size: 1.1rem;
-//       font-weight: normal;
       line-height: 1.6rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -281,7 +264,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin caption-font-mobile-style {
       font-size: 1.1rem;
-//       font-weight: normal;
       line-height: 1.6rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -302,7 +284,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Button Font Components */
     @mixin button-font-desktop-style {
       font-size: 2rem;
-//       font-weight: normal;
       line-height: 2.7rem;
       letter-spacing: 0.062rem;
       text-transform: uppercase;
@@ -310,7 +291,6 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin button-font-mobile-style {
       font-size: 2rem;
-//       font-weight: normal;
       line-height: 2.7rem;
       letter-spacing: 0.062rem;
       text-transform: uppercase;
