--- a/templates/header.html
+++ b/templates/header.html
@@ -46,7 +46,7 @@
     </div><!-- .site-branding -->
     <a href="#site-navigation" id="skip-to-navigation-link" aria-expanded="true" aria-controls="site-navigation">
       <svg>
-        <use xlink:href="{{ static('img/symbols.svg#hamburger-menu')}}"></use>
+        <use xlink:href="{{ '/assets/mercado/img/symbols.svg#hamburger-menu' }}"></use>
       </svg>
       <span class="screen-reader-text">Toggle Menu</span>
     </a>
